# MODNet-lm

./: pyproject.toml
onnx/: export_onnx.py
src/modnet/models/: modnet.py
src/modnet/models/backbones/: wrapper.py
