# Copyright (c) 2024 Synthesia Limited - All Rights Reserved
#
# Unauthorized copying of this file, via any medium is strictly prohibited.
# Proprietary and confidential.

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "modnet"
version = "0.0.1"

requires-python = ">=3.10"

dependencies = [
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
